--- a/client/src/assets/style/image.css
+++ b/client/src/assets/style/image.css
@@ -3,7 +3,11 @@
   margin: 12px auto;
   border: slategray 1px solid;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column;
+}
+
+.my-card-full {
+  width: 80vw;
 }
 
 .image-area {
@@ -14,8 +18,14 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  cursor: pointer;
 }
 
-.subtext {
-  align-self: flex-end;
+.full-area {
+  height: unset;
+}
+
+.full-image {
+  width: 100%;
+  cursor: default;
 }
