--- a/client/src/assets/style/footer.css
+++ b/client/src/assets/style/footer.css
@@ -3,6 +3,10 @@ footer {
   display: flex;
   flex-flow: row;
   height: 70px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 .spacer {
